add password change and send email when change passord and transfer money

--- a/transactions/templates/transactions/email.html
+++ b/transactions/templates/transactions/email.html
@@ -11,6 +11,8 @@
         {{amount}}$ {{title}} Successfully completed. After Transaction Balanace {{user.account.balance}}$
     {% elif title == 'Loan Aprove' %}
         {{amount}}$ {{title}} Successfully completed. After Transaction Balanace {{user.account.balance}}$
+    {% elif title == 'Receive Loan' %}
+        {{amount}}$ {{title}} Successfully completed. After Transaction Balanace {{user.account.balance}}$
     {% else %}
         Empty!
     {% endif %}
