--- a/accounts/templates/account/profile.html
+++ b/accounts/templates/account/profile.html
@@ -130,6 +130,7 @@
                     Update
                 </button>
             </div>
+            <h4 class="font-bold text-3xl text-left pt-5"><a class="bg-red-700 hover:bg-red-900 text-white font-bold py-2 px-2 rounded focus:outline-none focus:shadow-outline"  href="{% url "passwordChange" %}">Password Change</a></h4>
         </form>
     </div>
 </div>
